--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   
   
 
-  <title>Academic</title>
+  <title>Michael Genin</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#navbar-main" data-offset="71" >
