--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
   
   
-  <meta name="description" content="Professor of Artificial Intelligence">
+  <meta name="description" content="Associate Professor of Statistics">
 
   
   <link rel="alternate" hreflang="en-us" href="https://MichaelGenin.github.io/">
