--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ i<!DOCTYPE html>
   
   <meta property="og:site_name" content="Academic">
   <meta property="og:url" content="https://MichaelGenin.github.io/">
-  <meta property="og:title" content="Academic">
+  <meta property="og:title" content="Michaël Genin">
   <meta property="og:description" content="Associate Professor of Statistics">
   <meta property="og:locale" content="en-us">
   
@@ -103,7 +103,7 @@ i<!DOCTYPE html>
         <span class="icon-bar"></span>
       </button>
       
-      <a class="navbar-brand" href="/">Academic</a>
+      <a class="navbar-brand" href="/">Michaël genin</a>
     </div>
 
     
