--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@ i<!DOCTYPE html>
       
       <li>
         <i class="fa-li fa fa-clock-o fa-2x" aria-hidden="true"></i>
-        <span>Monday 10:00 to 13:00 or email for appointment</span>
+        <span>email for appointment</span>
       </li>
       
 
