--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ i<!DOCTYPE html>
 
     
 
-<h1 id="biography">Biography</h1>
+<h1 id="biography">About</h1>
 
 <p>Lena Smith is a professor of artificial intelligence at the Stanford AI Lab. Her research interests include distributed robotics, mobile computing and programmable matter. She leads the Robotic Neurobiology group, which develops self-reconfiguring robots, systems of self-organizing robots, and mobile sensor networks.</p>
 
